apps/metaheuristic/src/main/java/ai/metaheuristic/ai/dispatcher/source_code/graph/mhsc/MhSourceCodeParser.java
// Generated from ai/metaheuristic/ai/dispatcher/source_code/graph/mhsc/MhSourceCode.g4 by ANTLR 4.13.2
package ai.metaheuristic.ai.dispatcher.source_code.graph.mhsc;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class MhSourceCodeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, INT=69, STRING=70, ID=71, LINE_COMMENT=72, BLOCK_COMMENT=73, 
		WS=74;
	public static final int
		RULE_compilationUnit = 0, RULE_sourceDecl = 1, RULE_sourceOptions = 2, 
		RULE_sourceOption = 3, RULE_sourceBody = 4, RULE_sourceElement = 5, RULE_variablesBlock = 6, 
		RULE_variablesElement = 7, RULE_inlineEntry = 8, RULE_metasBlock = 9, 
		RULE_processDecl = 10, RULE_processInline = 11, RULE_functionRef = 12, 
		RULE_processElement = 13, RULE_processAttr = 14, RULE_inputsDecl = 15, 
		RULE_outputsDecl = 16, RULE_varDefList = 17, RULE_varDef = 18, RULE_varModifier = 19, 
		RULE_metaDecl = 20, RULE_metaEntry = 21, RULE_nameDecl = 22, RULE_paramsDecl = 23, 
		RULE_timeoutDecl = 24, RULE_cacheDecl = 25, RULE_cacheOption = 26, RULE_conditionDecl = 27, 
		RULE_skipPolicy = 28, RULE_conditionExpr = 29, RULE_compareExpr = 30, 
		RULE_compOp = 31, RULE_arithmeticExpr = 32, RULE_triesDecl = 33, RULE_tagDecl = 34, 
		RULE_priorityDecl = 35, RULE_preFunctionDecl = 36, RULE_postFunctionDecl = 37, 
		RULE_subProcessBlock = 38, RULE_processOrControl = 39, RULE_templateDecl = 40, 
		RULE_paramList = 41, RULE_templateCall = 42, RULE_argList = 43, RULE_arg = 44, 
		RULE_forLoop = 45, RULE_idRef = 46, RULE_idPart = 47, RULE_keyword = 48;
	private static String[] makeRuleNames() {
		return new String[] {
			"compilationUnit", "sourceDecl", "sourceOptions", "sourceOption", "sourceBody", 
			"sourceElement", "variablesBlock", "variablesElement", "inlineEntry", 
			"metasBlock", "processDecl", "processInline", "functionRef", "processElement", 
			"processAttr", "inputsDecl", "outputsDecl", "varDefList", "varDef", "varModifier", 
			"metaDecl", "metaEntry", "nameDecl", "paramsDecl", "timeoutDecl", "cacheDecl", 
			"cacheOption", "conditionDecl", "skipPolicy", "conditionExpr", "compareExpr", 
			"compOp", "arithmeticExpr", "triesDecl", "tagDecl", "priorityDecl", "preFunctionDecl", 
			"postFunctionDecl", "subProcessBlock", "processOrControl", "templateDecl", 
			"paramList", "templateCall", "argList", "arg", "forLoop", "idRef", "idPart", 
			"keyword"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'source'", "'{'", "'}'", "'('", "','", "')'", "'strict'", "'clean'", 
			"'instances'", "'='", "'variables'", "'<-'", "'->'", "'global'", "'inline'", 
			"'metas'", "':='", "'internal'", "':'", "'?'", "'type'", "'ext'", "'nullable'", 
			"'array'", "'parentContext'", "'sourcing'", "'meta'", "'name'", "'params'", 
			"'timeout'", "'cache'", "'on'", "'off'", "'omitInline'", "'cacheMeta'", 
			"'when'", "'skip'", "'normal'", "'always'", "'!'", "'&&'", "'||'", "'true'", 
			"'false'", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", "'+'", "'-'", 
			"'*'", "'/'", "'%'", "'tries'", "'tag'", "'priority'", "'pre'", "'post'", 
			"'sequential'", "'parallel'", "'race'", "'template'", "'@'", "'for'", 
			"'in'", "'..'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "INT", "STRING", 
			"ID", "LINE_COMMENT", "BLOCK_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MhSourceCode.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MhSourceCodeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompilationUnitContext extends ParserRuleContext {
		public SourceDeclContext sourceDecl() {
			return getRuleContext(SourceDeclContext.class,0);
		}
		public TerminalNode EOF() { return getToken(MhSourceCodeParser.EOF, 0); }
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MhSourceCodeVisitor ) return ((MhSourceCodeVisitor<? extends T>)visitor).visitCompilationUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			sourceDecl();
			setState(99);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SourceDeclContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(MhSourceCodeParser.STRING, 0); }
		public SourceBodyContext sourceBody() {
			return getRuleContext(SourceBodyContext.class,0);
		}
		public SourceOptionsContext sourceOptions() {
			return getRuleContext(SourceOptionsContext.class,0);
		}
		public SourceDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sourceDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MhSourceCodeVisitor ) return ((MhSourceCodeVisitor<? extends T>)visitor).visitSourceDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SourceDeclContext sourceDecl() throws RecognitionException {
		SourceDeclContext _localctx = new SourceDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sourceDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(T__0);
			setState(102);
			match(STRING);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(103);
				sourceOptions();
				}
			}

			setState(106);
			match(T__1);
			setState(107);
			sourceBody();
			setState(108);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SourceOptionsContext extends ParserRuleContext {
		public List<SourceOptionContext> sourceOption() {
			return getRuleContexts(SourceOptionContext.class);
		}
		public SourceOptionContext sourceOption(int i) {
			return getRuleContext(SourceOptionContext.class,i);
		}
		public SourceOptionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sourceOptions; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MhSourceCodeVisitor ) return ((MhSourceCodeVisitor<? extends T>)visitor).visitSourceOptions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SourceOptionsContext sourceOptions() throws RecognitionException {
		SourceOptionsContext _localctx = new SourceOptionsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sourceOptions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(T__3);
			setState(111);
			sourceOption();
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(112);
				match(T__4);
				setState(113);
				sourceOption();
				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(119);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SourceOptionContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(MhSourceCodeParser.INT, 0); }
		public SourceOptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sourceOption; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MhSourceCodeVisitor ) return ((MhSourceCodeVisitor<? extends T>)visitor).visitSourceOption(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SourceOptionContext sourceOption() throws RecognitionException {
		SourceOptionContext _localctx = new SourceOptionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_sourceOption);
		try {
			setState(126);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				match(T__6);
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				match(T__7);
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 3);
				{
				setState(123);
				match(T__8);
				setState(124);
				match(T__9);
				setState(125);
				match(INT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SourceBodyContext extends ParserRuleContext {
		public List<SourceElementContext> sourceElement() {
			return getRuleContexts(SourceElementContext.class);
		}
		public SourceElementContext sourceElement(int i) {
			return getRuleContext(SourceElementContext.class,i);
		}
		public SourceBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sourceBody; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MhSourceCodeVisitor ) return ((MhSourceCodeVisitor<? extends T>)visitor).visitSourceBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SourceBodyContext sourceBody() throws RecognitionException {
		SourceBodyContext _localctx = new SourceBodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sourceBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -72056494528017530L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 141L) != 0)) {
				{
				{
				setState(128);
				sourceElement();
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SourceElementContext extends ParserRuleContext {
		public VariablesBlockContext variablesBlock() {
			return getRuleContext(VariablesBlockContext.class,0);
		}
		public MetasBlockContext metasBlock() {
			return getRuleContext(MetasBlockContext.class,0);
		}
		public ProcessDeclContext processDecl() {
			return getRuleContext(ProcessDeclContext.class,0);
		}
		public TemplateDeclContext templateDecl() {
			return getRuleContext(TemplateDeclContext.class,0);
		}
		public ForLoopContext forLoop() {
			return getRuleContext(ForLoopContext.class,0);
		}
		public SourceElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sourceElement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MhSourceCodeVisitor ) return ((MhSourceCodeVisitor<? extends T>)visitor).visitSourceElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SourceElementContext sourceElement() throws RecognitionException {
		SourceElementContext _localctx = new SourceElementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_sourceElement);
		try {
			setState(139);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				variablesBlock();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(135);
				metasBlock();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(136);
				processDecl();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(137);
				templateDecl();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(138);
				forLoop();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariablesBlockContext extends ParserRuleContext {
		public List<VariablesElementContext> variablesElement() {
			return getRuleContexts(VariablesElementContext.class);
		}
		public VariablesElementContext variablesElement(int i) {
			return getRuleContext(VariablesElementContext.class,i);
		}
		public VariablesBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variablesBlock; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MhSourceCodeVisitor ) return ((MhSourceCodeVisitor<? extends T>)visitor).visitVariablesBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariablesBlockContext variablesBlock() throws RecognitionException {
		VariablesBlockContext _localctx = new VariablesBlockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_variablesBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(T__10);
			setState(142);
			match(T__1);
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 61440L) != 0)) {
				{
				{
				setState(143);
				variablesElement();
				}
				}
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(149);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariablesElementContext extends ParserRuleContext {
		public VarDefListContext varDefList() {
			return getRuleContext(VarDefListContext.class,0);
		}
		public List<IdRefContext> idRef() {
			return getRuleContexts(IdRefContext.class);
		}
		public IdRefContext idRef(int i) {
			return getRuleContext(IdRefContext.class,i);
		}
		public TerminalNode ID() { return getToken(MhSourceCodeParser.ID, 0); }
		public List<InlineEntryContext> inlineEntry() {
			return getRuleContexts(InlineEntryContext.class);
		}
		public InlineEntryContext inlineEntry(int i) {
			return getRuleContext(InlineEntryContext.class,i);
		}
		public VariablesElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variablesElement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MhSourceCodeVisitor ) return ((MhSourceCodeVisitor<? extends T>)visitor).visitVariablesElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariablesElementContext variablesElement() throws RecognitionException {
		VariablesElementContext _localctx = new VariablesElementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_variablesElement);
		int _la;
		try {
			setState(174);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__11:
				enterOuterAlt(_localctx, 1);
				{
				setState(151);
				match(T__11);
				setState(152);
				varDefList();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 2);
				{
				setState(153);
				match(T__12);
				setState(154);
				varDefList();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 3);
				{
				setState(155);
				match(T__13);
				setState(156);
				idRef();
				setState(161);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__4) {
					{
					{
					setState(157);
					match(T__4);
					setState(158);
					idRef();
					}
					}
					setState(163);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 4);
				{
				setState(164);
				match(T__14);
				setState(165);
				match(ID);
				setState(166);
				match(T__1);
				setState(170);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ID) {
					{
					{
					setState(167);
					inlineEntry();
					}
					}
					setState(172);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(173);
				match(T__2);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InlineEntryContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MhSourceCodeParser.ID, 0); }
		public TerminalNode STRING() { return getToken(MhSourceCodeParser.STRING, 0); }
		public InlineEntryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inlineEntry; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MhSourceCodeVisitor ) return ((MhSourceCodeVisitor<? extends T>)visitor).visitInlineEntry(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InlineEntryContext inlineEntry() throws RecognitionException {
		InlineEntryContext _localctx = new InlineEntryContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_inlineEntry);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(ID);
			setState(177);
			match(T__9);
			setState(178);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MetasBlockContext extends ParserRuleContext {
		public List<MetaEntryContext> metaEntry() {
			return getRuleContexts(MetaEntryContext.class);
		}
		public MetaEntryContext metaEntry(int i) {
			return getRuleContext(MetaEntryContext.class,i);
		}
		public MetasBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_metasBlock; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MhSourceCodeVisitor ) return ((MhSourceCodeVisitor<? extends T>)visitor).visitMetasBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MetasBlockContext metasBlock() throws RecognitionException {
		MetasBlockContext _localctx = new MetasBlockContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_metasBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			match(T__15);
			setState(181);
			match(T__1);
			setState(182);
			metaEntry();
			setState(187);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(183);
				match(T__4);
				setState(184);
				metaEntry();
				}
				}
				setState(189);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(190);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProcessDeclContext extends ParserRuleContext {
		public IdRefContext idRef() {
			return getRuleContext(IdRefContext.class,0);
		}
		public FunctionRefContext functionRef() {
			return getRuleContext(FunctionRefContext.class,0);
		}
		public List<ProcessElementContext> processElement() {
			return getRuleContexts(ProcessElementContext.class);
		}
		public ProcessElementContext processElement(int i) {
			return getRuleContext(ProcessElementContext.class,i);
		}
		public ProcessInlineContext processInline() {
			return getRuleContext(ProcessInlineContext.class,0);
		}
		public ProcessDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_processDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MhSourceCodeVisitor ) return ((MhSourceCodeVisitor<? extends T>)visitor).visitProcessDecl(this);
			else return visitor.visitChildren(this);
		}
	}
